force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/Pre_Active_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Pre_Active_Checklist__c</fullName>
    <description>List of tasks to complete before the Agreement Document record can be set to Active status</description>
    <label>Pre Active Checklist</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>