force-app/main/default/objects/APXTConga4__Conga_Template__c/listViews/APXTConga4__All.listView-meta.xml
<ListView>
    <fullName>APXTConga4__All</fullName>
    <columns>NAME</columns>
    <columns>APXTConga4__Name__c</columns>
    <columns>APXTConga4__Description__c</columns>
    <columns>Licence_Type__c</columns>
    <columns>Approval_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>APXTConga4__Template_Group__c</columns>
    <columns>APXTConga4__Template_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Email_Template__c</columns>
    <columns>Other_Required_Documents__c</columns>
    <columns>Pre_Active_Checklist__c</columns>
    <columns>Pre_Draft_Checklist__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>